<resources>
    <string name="app_name">Will the Sun Shine Again?</string>
    <string name="iconImageDescription">Sun with cloud in front raining</string>
    <string name="introTextText">Welcome to Will the Sun Shine Again? - the new app which hopes to help you answer that very question. Use the interface below to see an overview of your set locations\' forecasts, or use the buttons below to update the forecast, adjust your preferences, or search the stored forecasts. Happy forecasting!</string>
    <string name="forecastTimeDefault">09:00</string>
    <string name="forecastTempDefault">0°C</string>
    <string name="locationDescriptionDefault">Sunny with Clouds and Rain</string>
    <string name="locationTempDefault">12°C</string>
    <string name="highTempLowTempDefault">12°C | 7°C</string>
    <string name="dayAndDateDefault">Wednesday 25th October</string>
    <string name="humidityHeaderText">Humidity:</string>
    <string name="rainFallHeaderText">Rain Fall:</string>
    <string name="windHeaderText">Wind:</string>
    <string name="windDirectionText">West North West</string>
    <string name="windDescriptionText">Light Breeze</string>
    <string name="preferencesIntroText">Welcome to your Preferences screen! Here you can choose up to 10 different locations to store the forecasts for (currently UK based only). Click the button at the bottom when you\'re finished!</string>
    <string name="humidityLevelDefault">39%</string>
    <string name="rainFallDefault">0 mm</string>
    <string name="day1Text">Day 1</string>
    <string name="day2Text">Day 2</string>
    <string name="day3Text">Day 3</string>
    <string name="day4Text">Dat 4</string>
    <string name="addButtonText">Add</string>
    <string name="removeButtonText">Remove</string>
    <string name="location1Text">Aberdeen, UK</string>
    <string name="searchIntroText">Welcome to the Search screen! Here you can search for forecasts in 2 ways: either for a specified location based on a time range, or for forecasts with a temperate/humidity/wind speed higher or lower than a specific value. Happy searching!</string>
    <string name="searchButtonText">Search</string>
    <string name="search1HeaderText">Search for Times Based on Location:</string>
    <string name="search2HeaderText">Search for Forecasts Based On Temperature/Humidity/Wind Speed</string>
    <string name="valueFieldText">Type a value here</string>
    <string name="imageHourlyDescription">Image to represent the description of weather at a specific time during an hourly forecast.</string>
    <string name="buttonDeleteAllText">Delete Everything From Database</string>
    <string-array name="choiceOfLocations">
        <item name="locationChoice1">Aberdeen</item>
        <item name="locationChoice2">Armagh</item>
        <item name="locationChoice3">Bangor</item>
        <item name="locationChoice4">Bath</item>
        <item name="locationChoice5">Belfast</item>
        <item name="locationChoice6">Birmingham</item>
        <item name="locationChoice7">Bradford</item>
        <item name="locationChoice8">Brighton</item>
        <item name="locationChoice9">Bristol</item>
        <item name="locationChoice10">Cambridge</item>
        <item name="locationChoice11">Canterbury</item>
        <item name="locationChoice12">Cardiff</item>
        <item name="locationChoice13">Carlisle</item>
        <item name="locationChoice14">Chelmsford</item>
        <item name="locationChoice15">Chester</item>
        <item name="locationChoice16">Chichester</item>
        <item name="locationChoice17">Coventry</item>
        <item name="locationChoice18">Derby</item>
        <item name="locationChoice19">Derry</item>
        <item name="locationChoice20">Durham</item>
        <item name="locationChoice21">Edinburgh</item>
        <item name="locationChoice22">Ely</item>
        <item name="locationChoice23">Exeter</item>
        <item name="locationChoice24">Glasgow</item>
        <item name="locationChoice25">Gloucester</item>
        <item name="locationChoice26">Hereford</item>
        <item name="locationChoice27">Hull</item>
        <item name="locationChoice28">Inverness</item>
        <item name="locationChoice29">Lancaster</item>
        <item name="locationChoice30">Leeds</item>
        <item name="locationChoice31">Leicester</item>
        <item name="locationChoice32">Lichfield</item>
        <item name="locationChoice33">Lincoln</item>
        <item name="locationChoice34">Lisburn</item>
        <item name="locationChoice35">Liverpool</item>
        <item name="locationChoice36">London</item>
        <item name="locationChoice37">Manchester</item>
        <item name="locationChoice38">Newcastle upon Tyne</item>
        <item name="locationChoice39">Newport</item>
        <item name="locationChoice40">Newry</item>
        <item name="locationChoice41">Norwich</item>
        <item name="locationChoice42">Nottingham</item>
        <item name="locationChoice43">Oxford</item>
        <item name="locationChoice44">Perth</item>
        <item name="locationChoice45">Peterborough</item>
        <item name="locationChoice46">Plymouth</item>
        <item name="locationChoice47">Portsmouth</item>
        <item name="locationChoice48">Preston</item>
        <item name="locationChoice49">Ripon</item>
        <item name="locationChoice50">St Albans</item>
        <item name="locationChoice51">St Asaph</item>
        <item name="locationChoice52">St Davids</item>
        <item name="locationChoice53">Salford</item>
        <item name="locationChoice54">Salisbury</item>
        <item name="locationChoice55">Sheffield</item>
        <item name="locationChoice56">Southampton</item>
        <item name="locationChoice57">Stirling</item>
        <item name="locationChoice58">Stoke</item>
        <item name="locationChoice59">Sunderland</item>
        <item name="locationChoice60">Swansea</item>
        <item name="locationChoice61">Truro</item>
        <item name="locationChoice62">Wakefield</item>
        <item name="locationChoice63">Wells</item>
        <item name="locationChoice64">Winchester</item>
        <item name="locationChoice65">Wolverhampton</item>
        <item name="locationChoice66">Worcester</item>
        <item name="locationChoice67">York</item>
    </string-array>
    <string-array name="chosenLocations">
        <item name="userLocation1">Aberdeen</item>
        <item name="userLocation2">Bath</item>
        <item name="userLocation3">Edinburgh</item>
        <item name="userLocation4">Glasgow</item>
        <item name="userLocation5">Hull</item>
        <item name="userLocation6">Inverness</item>
        <item name="userLocation7">London</item>
        <item name="userLocation8">Manchester</item>
        <item name="userLocation9">Newcastle upon Tyne</item>
        <item name="userLocation10">York</item>
    </string-array>
    <string-array name="searchTimes">
        <item name="searchTime1">+ 3 hours</item>
        <item name="searchTime2">+ 6 hours</item>
        <item name="searchTime3">+ 9 hours</item>
        <item name="searchTime4">+ 12 hours (\&#189; a day)</item>
        <item name="searchTime5">+ 15 hours</item>
        <item name="searchTime6">+ 18 hours</item>
        <item name="searchTime7">+ 21 hours</item>
        <item name="searchTime8">+ 24 hours (1 day)</item>
        <item name="searchTime9">+ 27 hours</item>
        <item name="searchTime10">+ 30 hours</item>
        <item name="searchTime11">+ 33 hours</item>
        <item name="searchTime12">+ 36 hours (1\&#189; days)</item>
        <item name="searchTime13">+ 39 hours</item>
        <item name="searchTime14">+ 42 hours</item>
        <item name="searchTime15">+ 45 hours</item>
        <item name="searchTime16">+ 48 hours (2 days)</item>
        <item name="searchTime17">+ 51 hours</item>
        <item name="searchTime18">+ 54 hours</item>
        <item name="searchTime19">+ 57 hours</item>
        <item name="searchTime20">+ 60 hours(2\&#189; days)</item>
        <item name="searchTime21">+ 63 hours</item>
        <item name="searchTime22">+ 66 hours</item>
        <item name="searchTime23">+ 69 hours</item>
        <item name="searchTime24">+ 72 hours (3 days)</item>
        <item name="searchTime25">+ 75 hours</item>
        <item name="searchTime26">+ 78 hours</item>
        <item name="searchTime27">+ 81 hours</item>
        <item name="searchTime28">+ 84 hours(3\&#189; days)</item>
        <item name="searchTime29">+ 87 hours</item>
        <item name="searchTime30">+ 90 hours</item>
        <item name="searchTime31">+ 93 hours</item>
        <item name="searchTime32">+ 96 hours (4 days)</item>
        <item name="searchTime33">+ 99 hours</item>
        <item name="searchTime34">+ 102 hours</item>
        <item name="searchTime35">+ 105 hours</item>
        <item name="searchTime36">+ 108 hours(4\&#189; days)</item>
        <item name="searchTime37">+ 111 hours</item>
        <item name="searchTime38">+ 114 hours</item>
        <item name="searchTime39">+ 117 hours</item>
        <item name="searchTime40">+ 120 hours (5 days)</item>
    </string-array>
    <string-array name="searchTerms">
        <item name="searchTerm1">Temperature (Celsius)</item>
        <item name="searchTerm2">Humidity (Percentage)</item>
        <item name="searchTerm3">Wind Speed (Metres per Second)</item>
    </string-array>
    <string-array name="greaterLessThan">
        <item name="greaterThan">Greater Than or Equal To</item>
        <item name="lessThan">Less Than or Equal To</item>
    </string-array>
</resources>
